# Phoenix

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
apps/agent/: Dockerfile  README.md  pyproject.toml
apps/agent/src/phoenix_agent/: __init__.py  adk_agents.py  agent.py  config.py  gitlab_mcp.py  main.py  memory.py
apps/agent/src/phoenix_agent/strategies/: __init__.py  config.py  dependency.py  flaky_test.py  lint.py
apps/agent/src/phoenix_agent/tools/: __init__.py  gitlab_tools.py  parser_tools.py
apps/agent/tests/: __init__.py  test_smoke.py
apps/gateway/: Dockerfile  go.mod
apps/gateway/cmd/server/: main.go
apps/gateway/internal/routes/: proxy.go  routes.go
apps/gateway/internal/webhook/: handler.go
apps/gateway/internal/websocket/: hub.go
apps/parser/: Cargo.toml  Dockerfile
apps/parser/src/: main.rs
apps/runner/: Dockerfile  pyproject.toml
apps/runner/src/phoenix_runner/: __init__.py  main.py
apps/web/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  styles.css
apps/web/src/components/: ConnectionPill.tsx  ReasoningTrace.tsx  StatsBar.tsx  StepBadge.tsx
apps/web/src/hooks/: useAgentStream.ts
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  SUBMISSION.md
infra/scripts/: deploy-all.sh  seed-demo-data.sh  setup-gcp.sh
