[project]
name = "phoenix-agent"
version = "0.1.0"
description = "Phoenix Agent Orchestrator - Autonomous GitLab pipeline repair agent built on Google ADK"
authors = [
    { name = "Wiqi Lee", email = "wiqi@phoenix.dev" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # Google Cloud Agent Builder - the mandatory orchestration framework
    "google-adk>=0.4.0",
    "google-cloud-aiplatform>=1.71.0",
    "google-genai>=0.3.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-secret-manager>=2.21.0",

    # MCP integration (mandatory partner integration)
    "mcp>=1.1.0",

    # FastAPI for HTTP layer (NOT an orchestrator, just HTTP transport)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Supporting libraries (not orchestrators)
    "httpx>=0.27.0",
    "python-gitlab>=4.13.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "websockets>=13.1",
    "python-dotenv>=1.0.1",
    "black>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phoenix_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
