[package]
name = "phoenix-parser"
version = "0.1.0"
edition = "2021"
authors = ["Wiqi Lee"]
description = "High performance log parser for Phoenix agent"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
