[project]
name = "phoenix-runner"
version = "0.1.0"
description = "Phoenix sandbox executor - runs fix attempts in isolated Cloud Run Jobs"
authors = [
    { name = "Wiqi Lee", email = "wiqi@phoenix.dev" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "python-gitlab>=4.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phoenix_runner"]
